# basketball_bracket

./: LICENSE  README.md  main.py  notes.txt  pyproject.toml  test_commit.txt  test_jupyter.ipynb
code/: create_data.ipynb  data_prep.ipynb  knn.ipynb  old_knn.ipynb  read_data.ipynb  regression.ipynb
input_data/: cbb_postseason_wins.csv  model_data.csv
